# multithreading-labs

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  main.cpp  results.link
lab1/runners/: main.cpp  matrix.txt  performanceTest.cpp  unitTests.cpp
lab1/src/: DeterminantCalculator.cpp  DeterminantCalculator.hpp  main.cpp  utils.h
lab2/: CMakeLists.txt  result.link
lab2/runners/: main.cpp  performanceTest.cpp  unitTests.cpp
lab2/src/: PNMAutoBrightener.cpp  PNMAutoBrightener.hpp  PNMReaderWriter.hpp  utils.h
lab3/: CMakeLists.txt  requirements.txt
lab3/runners/: Runner.hpp  main.cpp  matrixOut.txt  unitTests.cpp
lab3/src/: Device.hpp  DeviceProvider.hpp  MatrixMultiplicatorKernel.hpp  OpenCL.h  kernel.cl
lab3/src/kernels/: naive.cl  tiling.cl  vectors.cl
lab4/: CMakeLists.txt
lab4/runners/: arrayIn.txt  main.cpp  unitTests.cpp
lab4/src/: Device.hpp  DeviceProvider.hpp  PrefixSumKernel.hpp
lab4/src/kernels/: prefixSum.cl
